fix gauss cut-off in orbit; fix glow issue on ios; update z-index for workshop svg

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -81,7 +81,7 @@ body {
     // top: 50%;
     // left: 50%;
     color: white;
-    z-index: 10;
+    z-index: 2;
     position: absolute;
     font-family: 'Neon';
     width: 100%;
